mdapioutput/objects/CORE_AssortmentLineItem__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Assortment Line Items</relationshipLabel>
        <relationshipName>Assortment_Line_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Activity_Data_Rec_Type__c</fullName>
        <formula>IF(AND ( ISPICKVAL(Universe__c, &apos;Audit 1&apos;), RecordType.DeveloperName = &apos;ShelfProductAudit&apos;),&quot;Audit_category_1&quot;, 
IF(AND ( ISPICKVAL(Universe__c, &apos;Audit 2&apos;), RecordType.DeveloperName = &apos;ShelfProductAudit&apos;),&quot;Audit_category_2&quot;, 
IF(RecordType.DeveloperName = &apos;ShelfStructureAudit&apos;,&quot;ShelfAudit&quot;, 
IF( Pharma_Product__r.RecordTypeId  = &apos;CompetitorProduct&apos; , &quot;CompetitorProductTracking&quot;,&quot;POSMaterial&quot;))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Activity Data Rec Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pharma_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pharma Product</label>
        <referenceTo>CTPHARMA__Product__c</referenceTo>
        <relationshipLabel>Assortment Line Items</relationshipLabel>
        <relationshipName>Assortment_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Universe__c</fullName>
        <label>Universe</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Ambient</fullName>
                </value>
                <value>
                    <fullName>Ultra Fresh</fullName>
                </value>
                <value>
                    <fullName>Snacking</fullName>
                </value>
                <value>
                    <fullName>Audit 1</fullName>
                </value>
                <value>
                    <fullName>Audit 2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Assortment Line Item</label>
    <nameField>
        <displayFormat>ALI-{00000000}</displayFormat>
        <label>N° Assortment Line Item</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Assortment Line Items</pluralLabel>
    <recordTypes>
        <fullName>Asset_Audit</fullName>
        <active>true</active>
        <label>Asset Audit</label>
    </recordTypes>
    <recordTypes>
        <fullName>Shelf_Product_Audit</fullName>
        <active>true</active>
        <label>Shelf Product Audit</label>
    </recordTypes>
    <recordTypes>
        <fullName>Shelf_Structure_Audit</fullName>
        <active>true</active>
        <label>Shelf Structure Audit</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>